--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     package="br.com.caelum.fj59.carangos">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <permission android:name="br.com.caelum.fj59.carangos.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="br.com.caelum.fj59.carangos.permission.C2D_MESSAGE" />
+
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".app.CarangosApplication"
@@ -18,6 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".gcm.GCMBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2DM.intent.RECEIVE"></action>
+                <category android:name="br.com.caelum.fj59.carangos"></category>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
